# RofiTodo

./: .gitignore  Cargo.toml  Makefile.am  README.md  configure.ac
src/: date_selector.rs  indexer.rs  json_task.rs  main.rs  rofi.rs  task.rs
