[package]
name = "rofitodo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
serde = { version="1.0.130",features = ["derive"] }
serde_json = "1.0.59"
chrono = "0.4.19"
structopt = "0.3.23"
home = "0.5.3"
